--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	color: #fff;
 }
 body {
-	background: url(background-new.jpg) no-repeat center center;
+	background: url(background-2.jpg) no-repeat center center;
 }
 .signup-form {
 	color: white;
